Made edits to some boiler plate text.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="profile">
               <img class="rob-img" src="Images\Professional Photo-modified.png" alt="rob-lineker-headshot">
               <h2>Hello.</h2>
-              <p class="body">I'm a new web developer trying to improve my skills. This website is to demonstrate my work.</p>
+              <p class="body">I'm a new web developer trying to improve my skills. This website was created for the Dr. Angela Yu 2022 Web Developer Bootcamp CSS Module.</p>
             </div>
             <hr>
             <div class="skills">
@@ -53,8 +53,7 @@
           
           <div class="bottom-container">
             <a class="footer-link" href="https://www.linkedin.com/in/rob-lineker">LinkedIn</a>
-            <a class="footer-link" href="https://twitter.com/">Twitter</a>
-            <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+            <a class="footer-link" href="mailto:roblineker@gmail.com/">Email</a>
             <p class="footer">© Rob Lineker 2022.</p>
           </div>
           
